--- a/Todoey/Base.lproj/Main.storyboard
+++ b/Todoey/Base.lproj/Main.storyboard
@@ -32,7 +32,14 @@
                             <outlet property="delegate" destination="x8k-gL-bWf" id="7bJ-pC-hJG"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Todoey" id="hXw-0C-qoa"/>
+                    <navigationItem key="navigationItem" title="Todoey" id="hXw-0C-qoa">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Hg8-er-pUm">
+                            <color key="tintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <action selector="addButtonPressed:" destination="x8k-gL-bWf" id="axD-yz-pMs"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="p5a-YB-Y8y" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
